修改了03的网页代码

--- a/03/index.html
+++ b/03/index.html
@@ -7,6 +7,7 @@
     <h1>Welcome to the Head First Lounge</h1>
     <img src="drinks.gif">
     <p>
+      come baby!
       Join us any evening for 
       refreshing elixirs,
       conversation and maybe a game or two of
