--- a/06/index.html
+++ b/06/index.html
@@ -8,8 +8,8 @@
     <h1>Welcome to the Head First Lounge</h1>
     <img src="drinks.gif">
     <p>
-      come baby!我没k
-      Join us any evening for 
+      come baby!zzk
+      Join us any evening for <a href="elixirs.html">elixers</a>. 
       refreshing elixirs,
       conversation and maybe a game or two of
       <em>Dance Dance Revolution</em>.
@@ -19,7 +19,7 @@
     <h2>Directions</h2>
     <p>
       You'll find us right in the center of downtown Webville.
-      If you need help finding us, check out 
+      If you need help finding us, check out <a href="directions.html">directions</a>. 
       our detailed directions.Come join us!
     </p>
   </body>
