新建文件夹

--- a/25/24/index.html
+++ b/25/24/index.html
@@ -16,10 +16,10 @@
 
     
     <div class="header">
-      <img src="images/header.gif" alt="Starbuzz Coffee header image">
+      <img src="images/award.gif" alt="Starbuzz Coffee header image">
     </div>
     <div class="award">
-	<img src="images/award.gif" alt="Roaster of the Year award">
+	<img src="images/header.gif" alt="Roaster of the Year award">
   </div>
     <section id="drinks">
 	<h1>BEVERAGES</h1>
